--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,8 @@ eclipse.preferences.version=1
 encoding//src/application/Config.java=UTF-8
 encoding//src/controller/PlaceOrderController.java=UTF-8
 encoding//src/controller/PlaceRushOrderController.java=UTF-8
+encoding//src/entity/payment/DomesticDebitCard.java=UTF-8
+encoding//src/entity/payment/PaymentCard.java=UTF-8
 encoding//src/utils/Configs.java=UTF-8
 encoding//test/controller/AllTests.java=UTF-8
 encoding//test/controller/CheckAddressTest.java=UTF-8
